--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.1.0",
     "angular-in-memory-web-api": "^0.14.0",
     "bootstrap-icons": "^1.9.1",
+    "immer": "^9.0.15",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
