Deeply compare using lodash's isEqual.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-in-memory-web-api": "^0.14.0",
     "bootstrap-icons": "^1.9.1",
     "immer": "^9.0.15",
+    "lodash": "^4.17.21",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -32,6 +33,7 @@
     "@angular/cli": "~14.1.2",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "@types/lodash": "^4.14.185",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
